feat: refactor translation logic to process HTML content directly and enhance UI
This commit introduces significant changes to the HTML translator, enabling direct processing of HTML content and improving the user interface.

- **Refactor `translateHtml` function:** Modified the `translateHtml` function to accept HTML content directly instead of relying on file paths. This change improves efficiency and allows for more flexible integration with other systems. A new `translateHtmlContent` function was introduced to handle the core translation logic, while the original `translateHtml` function was retained for backward compatibility with file-based translations.
- **Update `/translate` endpoint:** The `/translate` endpoint now utilizes the `translateHtmlContent` function to translate HTML content received directly from the client. This eliminates the need for temporary file storage and simplifies the translation process. The endpoint now returns the translated HTML content and a suggested filename for download.
- **Enhance UI:** Updated the UI to handle the translated HTML content directly. The translated HTML is now presented to the user, and a download button is provided to save the translated content as an HTML file. The download button dynamically generates a download URL using a Blob object, and the URL is revoked after the download is initiated to prevent memory leaks.
- **Add `nodemon` as a dev dependency:** Added `nodemon` as a development dependency to automatically restart the server during development.
- **Update `start` script:** Updated the `start` script in `package.json` to use `nodemon` for automatic server restarts during development.
- **Serve static files using path.join:** Updated the serving of static files to use `path.join(__dirname, 'public')` to ensure correct file paths regardless of the current working directory.
- **Make UI improvements:** Made minor UI improvements to the select elements in `index.html`.
- **Set dynamic port:** Set the por

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
                             <select
                                 id="sourceLang"
                                 name="sourceLang"
-                                class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                                class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 px-3 py-2"
                                 required
                             >
                                 <option value="">Select source language</option>
@@ -94,7 +94,7 @@
                             <select
                                 id="targetLang"
                                 name="targetLang"
-                                class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                                class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 px-3 py-2"
                                 required
                             >
                                 <option value="">Select target language</option>
@@ -329,23 +329,40 @@
                     formData.append("targetLang", targetLangSelect.value);
 
                     // Send translation request
-                    fetch(
-                        "https://html-translator-deepak.vercel.app/translate",
-                        {
-                            method: "POST",
-                            body: formData,
-                        }
-                    )
+                    fetch("/translate", {
+                        method: "POST",
+                        body: formData,
+                    })
                         .then((response) => response.json())
                         .then((data) => {
                             // Hide progress indicator
                             progressContainer.classList.add("hidden");
 
                             if (data.success) {
-                                // Show success message and download button
+                                // Show success message
                                 resultContainer.classList.remove("hidden");
-                                downloadBtn.href = data.downloadPath;
-                                downloadBtn.download = `translated-${htmlFileInput.files[0].name}`;
+
+                                // Create a Blob with the translated HTML content
+                                const blob = new Blob([data.translatedHtml], {
+                                    type: "text/html",
+                                });
+
+                                // Create a download URL for the blob
+                                const downloadUrl = URL.createObjectURL(blob);
+
+                                // Set the download button attributes
+                                downloadBtn.href = downloadUrl;
+                                downloadBtn.download =
+                                    data.suggestedFilename ||
+                                    `translated-${htmlFileInput.files[0].name}`;
+
+                                // Add event listener to revoke the object URL after download
+                                downloadBtn.addEventListener("click", () => {
+                                    // Give browser some time to start the download before revoking
+                                    setTimeout(() => {
+                                        URL.revokeObjectURL(downloadUrl);
+                                    }, 100);
+                                });
                             } else {
                                 // Show error message
                                 showError(
