feat: enhance HTML translator landing page with SEO metadata and improved footer
This commit introduces several enhancements to the HTML translator's landing page:

-   **Added SEO Meta Tags:** Included meta tags for description, author, and keywords to improve search engine optimization.
-   **Added Favicon:** Included a favicon to improve the site's visual identity.
-   **Enhanced Footer:** Updated the footer with copyright information and a link to the developer's portfolio.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>HTML Translator</title>
+        <meta
+            name="description"
+            content="A simple and fast HTML language translator built by Deepak. Instantly translate between languages using a clean, responsive interface."
+        />
+        <!-- SEO Meta Tags -->
+        <meta name="author" content="Deepak" />
+        <meta
+            name="keywords"
+            content="HTML Translator, Language Translation, Deepak, Online Translator, Translate Tool"
+        />
+        <link rel="icon" type="image/png" href="favicon.png" />
         <script src="https://cdn.tailwindcss.com"></script>
         <link
             rel="stylesheet"
@@ -176,9 +187,21 @@
                 </div>
             </div>
 
-            <footer class="mt-12 text-center text-gray-500 text-sm">
-                <p>HTML Translator Tool © 2025</p>
-                <!-- <p>Made By Deepak</p> -->
+            <footer
+                class="mt-12 text-center text-gray-500 text-sm py-4 border-t"
+            >
+                <p>© 2025 HTML Translator Tool. All rights reserved.</p>
+                <p class="mt-1">
+                    Made with ❤️ by
+                    <a
+                        href="https://ideepakrajput.tech"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="text-blue-500 hover:underline"
+                    >
+                        Deepak
+                    </a>
+                </p>
             </footer>
         </div>
 
